2012-04-18  Uros Bizjak  <ubizjak@gmail.com>

	* config/alpha/sync.md (fetchop_name): Change ior attribute to "or".

2012-04-17  Uros Bizjak  <ubizjak@gmail.com>

	PR target/53020
	* config/i386/sync.md (atomic_<code><mode>): Rename to
	atomic_<logic><mode>.

2012-04-16  Uros Bizjak  <ubizjak@gmail.com>

	Backport from mainline
	2012-04-12  Uros Bizjak  <ubizjak@gmail.com>

	PR target/52932
	* config/i386/avx2intrin.h (_mm256_permutevar8x32_ps): Change second
	argument type to __m256i.  Update call to __builtin_ia32_permvarsf256.
	* config/i386/sse.md (avx2_permvarv8sf): Change operand 1 to V8SI.
	(avx2_permvarv8sf, avx2_permvarv8si): Switch operands 1 and 2.
	* config/i386/i386.c (bdesc_args) <__builtin_ia32_permvarsf256>:
	Update builtin type to V8SF_FTYPE_V8SF_V8SI.
	(ix86_expand_vec_perm): Update calls to gen_avx2_permvarv8si and
	gen_avx2_permvarv8sf.

2012-04-16  Martin Jambor  <mjambor@suse.cz>

	Backported from mainline

	2012-04-13  Martin Jambor  <mjambor@suse.cz>
	PR middle-end/52939

	* gimple-fold.c (gimple_get_virt_method_for_binfo): Bail out if
	fold_ctor_reference returns a zero constant.

2012-04-13  H.J. Lu  <hongjiu.lu@intel.com>

	Backported from mainline
	2012-04-13  H.J. Lu  <hongjiu.lu@intel.com>

	* config/i386/i386-c.c (ix86_target_macros): Define _ILP32
	and __ILP32__ for x32.

2012-04-13  Tom de Vries  <tom@codesourcery.com>

	Backport from mainline r186418.

	2012-04-13  Tom de Vries  <tom@codesourcery.com>

	* tree-ssa-tail-merge.c (gsi_advance_bw_nondebug_nonlocal): Add
	parameters vuse and vuse_escaped.
	(find_duplicate): Init vuse1, vuse2 and vuse_escaped.  Pass to
	gsi_advance_bw_nondebug_nonlocal.  Return if vuse_escaped and
	vuse1 != vuse2.

2012-04-13  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/52969
	* tree-if-conv.c (predicate_mem_writes): Properly gimplify
	the condition for the COND_EXPR and handle predicate negation
	by swapping the COND_EXPR arms.

2012-04-13  Richard Guenther  <rguenther@suse.de>
